--- a/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
@@ -155,7 +155,7 @@ ng-component{
         }
     }
     tr.ui-expanded-row-content {
-        background: #D9EDFD;
+        background: #f5f5f5;
         padding: .4rem;
         .ui-datatable {
             .ui-state-default {
