--- a/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
@@ -2,8 +2,7 @@ label{
     margin-bottom: .4rem;
 }
 .form-control{
-	border-color: $border-color;
-    color: $border-color-dark;
+	border-color: #b9b6b6;
 }
 .form-group.required label:after, label.required:after {
     content: "*";
@@ -26,24 +25,38 @@ label.custom-control.required{
     color: red;
 }
 .form-control[disabled]{
-	border-color: $border-color-light;
-    color: $border-color;
-    background-color: transparent;
+	border-color: #dadada;
+    background-color: #ebebeb;
 }
 .form-control:focus{
-	//border-color: $border-color-dark;
-    color: $border-color-dark;
+	border-color: #9dd3f7;
     outline: $focus-outline-setting;
 }
+
+.ui-calendar .ui-widget:disabled {
+    opacity: 1;
+    filter: Alpha(Opacity=100);
+    border-color: #dadada;
+    background-color: #ebebeb;
+}
+.ui-calendar .ui-widget.ui-calendar-button:disabled {
+    border-color: transparent;
+    background-color: transparent;
+}
+.ui-calendar input {
+    width: 120px;
+}
+
 //for custom radio and checkbox
 .custom-control-indicator {
     border: 1px solid $border-color;
 }
 // override webkit auto fill styles
 input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0px 1000px white inset;}
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
 :focus{
-    outline: #8FBEE6 solid 2px; 
+    outline: $focus-outline-setting ; 
 }
 textarea.form-control {
     max-height: 140px;
