--- a/nimbus-ui/nimbusui/src/assets/scss/_a.button.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.button.scss
@@ -62,7 +62,16 @@ button:focus{
     border-color: #b9b6b6;
   }
 }
-
+.ui-datatable-header .btn-plain{
+  
+  &:hover{
+    text-decoration: none;
+  }
+ .fa-fw {
+    font-size: 1rem;
+    padding-top: .1rem;
+}
+}
 .btn-plain .fa-fw {
   width: 1.28571429em;
   text-align: center;
