--- a/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
@@ -93,11 +93,11 @@ ng-component{
             }
             button{
                 position: absolute;
-                right: 3%;
-                top: 2.2px;
-                font-size: 0.8rem;
+                right: 2px;
+                top: 3px;
+                font-size: 0.9rem;
                 border: none;
-                height: 1rem;
+                height: 1.2rem;
                 color: #b9b6b6;
                 &:hover, &:focus{
                     color: #4c4c4c;
@@ -233,6 +233,7 @@ ng-component{
     &.ui-paginator {
         font-size: .8rem;
         text-align: right;
+        padding: .25em;
         .ui-paginator-element span.fa:before {
             font-size: 1.15rem;
         }
