grid updates and signature styling

--- a/nimbus-ui/nimbusui/src/assets/scss/_a.action-dropdown.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.action-dropdown.scss
@@ -136,3 +136,10 @@
         }
     }
 }
+.ui-datatable .ui-datatable-data>tr>td.dropdown {
+    padding-top: 7px;
+    padding-bottom: 0;
+}
+.ui-datatable .ui-datatable-thead>tr>th, .ui-datatable .ui-datatable-tfoot>tr>td, .ui-datatable .ui-datatable-data>tr>td{
+    padding: .5rem .4rem;
+}
