--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
@@ -6,8 +6,8 @@
 			<nm-tooltip *ngIf="helpText" [helpText]='helpText'></nm-tooltip>
 		</p-header>
 		<div class="recordsDisplayed">Showing {{rowStart}}-{{rowEnd}} of  {{totalRecords}}
-			 <button  class="btn-plain ml-2" (click)="clearAll()"><i class="fa fa-fw fa-plus" aria-hidden="true"></i>Clear Grid Filters</button> 
-			 <button class="btn-plain ml-2" (click)="export()"><i class="fa fa-fw fa-share" aria-hidden="true"></i>Export</button>
+			 <button  class="btn-plain ml-2" (click)="clearAll()"><i class="fa fa-fw fa-times hidden-md-down" aria-hidden="true"></i>Clear Grid Filters</button> 
+			 <button class="btn-plain ml-2" (click)="export()"><i class="fa fa-fw fa-share hidden-md-down" aria-hidden="true"></i>Export</button>
 		</div>
 		
 	</div>
