--- a/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
@@ -86,16 +86,15 @@ ng-component{
 
         .filterHolder{
             position: relative;
-            margin-top: 3px;
+            margin-top: 6px;
             input{
-                max-width: 100%;
-                min-width: 98%;
+                width: 100%;
             }
             button{
                 position: absolute;
                 right: 4px;
-                top: 3px;
-                font-size: 0.9rem;
+                top: 2px;
+                background: transparent;
                 border: none;
                 height: 1.2rem;
                 color: #b9b6b6;
@@ -106,24 +105,24 @@ ng-component{
             }
         }
 
-            .gridFilterIcon {
-                position:absolute;
-                right: 2px;
-                top: .6rem;
-                color: #94acbc;
-                &::before{
-                    background-size: 15px 15px;
-                    height: 15px;
-                    width: 15px;
-                    display: block;
-                    font-family: "fontAwesome";
-                    content: "\f0b0";
-                    font-size: 1.2rem;
-                }
-                &:hover, &:focus{
-                    color: #4c4c4c;
-                }
+        .gridFilterIcon {
+            position:absolute;
+            right: 2px;
+            top: .6rem;
+            color: #94acbc;
+            &::before{
+                background-size: 15px 15px;
+                height: 15px;
+                width: 15px;
+                display: block;
+                font-family: "fontAwesome";
+                content: "\f0b0";
+                font-size: 1.2rem;
             }
+            &:hover, &:focus{
+                color: #4c4c4c;
+            }
+        }
        
        
         .ui-sortable-column-icon {
