--- a/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
@@ -1,6 +1,10 @@
 label{
     margin-bottom: .4rem;
 }
+//for IE remove focus outline
+fieldset:focus{
+    outline: none;
+  }
 .form-control{
 	border-color: #b9b6b6;
 }
