--- a/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
@@ -6,6 +6,12 @@ ng-component{
     border: 1px solid #cecece;
     position: relative;
 }
+.scrollGrid.greyGrid .ui-datatable-tablewrapper, .scrollGrid.greyGrid .ui-widget-header {
+    background: darkgrey;
+}
+.scrollGrid .ui-datatable-tablewrapper {
+    background: #6e9de1;
+}
 
 .ui-expanded-row-content .scrollGrid .ui-datatable-scrollable-body, 
 .ui-expanded-row-content .ui-datatable .ui-datatable-scrollable-body {
