--- a/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
@@ -168,10 +168,12 @@ ng-component{
         }
     }
     p-header {
-       float:left;
+        float:left;
         margin-left: 1rem;
         font-size: 1.3rem;
         margin-top: .3rem;
+        position: relative;
+        z-index: 1;
     }
     th.dropdown, td.dropdown {
         width: 40px;
@@ -284,6 +286,7 @@ ng-component{
     left: 40%;
     padding-top: .6rem;
     font-size: .9rem;
+    z-index: 1;
 }
 .ui-datatable-header .btn-plain { 
     color: #FFF; 
