--- a/nimbus-ui/nimbusui/src/app/components/platform/section.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/section.component.html
@@ -1,7 +1,7 @@
 <div class="{{cssClass}}" id="{{code}}">
     <!-- Section Message -->
     
-      <nm-message messageType="{{element?.message.type}}" messageText="{{element?.message.text}}" *ngIf="element?.message"></nm-message>
+    <nm-message messageContext="{{element?.message.context}}"  [messageArray]="element?.message.messageArray" [life]="element?.message.life" *ngIf="element?.message"></nm-message>
         
     <!-- Loop thru Section Params - look at the visible flag and put in the right condition-->
     <ng-template [ngIf]="visible==true">
