fixes signature and dropdown in a question group styling issue

--- a/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
@@ -137,6 +137,7 @@ p-dropdown.form-control {
     padding:0.1rem;
     background: none;
     line-height: 1.5;
+    margin-left: 20px;
     .ui-widget-content {
         border: 1px solid #9dd3f7;
         background: #ecf7ff;
