grid refactor + disable image buttons

--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/grid.component.html
@@ -91,7 +91,7 @@
 
 			<p-column *ngIf="col?.uiStyles?.attributes?.alias=='LinkMenu'" styleClass="dropdown">
 				<ng-template pTemplate="body" let-cell="rowData" let-rowIndex="rowIndex">
-					<nm-action-dropdown #dropDown [element]="paramState[rowIndex][colIndex]" [params]="col?.type?.model?.paramConfigs" [rowData]="cell" [elementPath]="getRowPath(col, cell)" (dropDownClick)="toggleOpen($event)"></nm-action-dropdown>
+					<nm-action-dropdown #dropDown [element]="getLinkMenuParam(col,rowIndex)" [params]="col?.type?.model?.paramConfigs" [rowData]="cell" [elementPath]="getRowPath(col, cell)" (dropDownClick)="toggleOpen($event)"></nm-action-dropdown>
 				</ng-template>
 			</p-column>
 			
