table component changes for link menu

--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -78,7 +78,7 @@
                     <td *ngIf="col.uiStyles.attributes?.hidden == false">
                         <span title="{{getCellDisplayValue(rowData, col)}}" *ngIf="showValue(col)">{{getCellDisplayValue(rowData, col)}}</span>
                         <span styleClass="dropdown" *ngIf="showLinkMenu(col)">
-                            <nm-action-dropdown #dropDown [element]="paramState[rowIndex][colIndex]" [params]="col?.type?.model?.paramConfigs" [rowData]="rowData"
+                            <nm-action-dropdown #dropDown [element]="getLinkMenuParam()" [params]="col?.type?.model?.paramConfigs" [rowData]="rowData"
                                 [elementPath]="getRowPath(col, rowData)" (dropDownClick)="toggleOpen($event)"></nm-action-dropdown>
                         </span>
                     </td>
