--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -30,7 +30,7 @@
                 </th>
                 <th style="width: 2.25em" *ngIf="element.config?.uiStyles?.attributes?.expandableRows"></th>
                 <ng-template ngFor let-col let-colIndex="index" [ngForOf]="params">
-                    <th *ngIf="col.uiStyles.attributes?.hidden == false" [pSortableColumn]="col">
+                    <th *ngIf="col.uiStyles.attributes?.hidden == false" [pSortableColumn]="col" [ngClass]="{dropdown:showLinkMenu(col)}">
                         <span *ngIf="showValue(col)">
                             {{col.header}}
                             <p-sortIcon [field]="col" *ngIf="col?.uiStyles?.attributes?.sortable !== false"></p-sortIcon>
@@ -76,9 +76,9 @@
                 </td>
 
                 <ng-template ngFor let-col let-colIndex="index" [ngForOf]="params">
-                    <td *ngIf="col.uiStyles.attributes?.hidden == false">
+                    <td *ngIf="col.uiStyles.attributes?.hidden == false" [ngClass]="{dropdown:showLinkMenu(col)}">
                         <span title="{{getCellDisplayValue(rowData, col)}}" *ngIf="showValue(col)">{{getCellDisplayValue(rowData, col)}}</span>
-                        <span styleClass="dropdown" *ngIf="showLinkMenu(col)">
+                        <span *ngIf="showLinkMenu(col)">
                             <nm-action-dropdown #dropDown [element]="getLinkMenuParam(col, rowIndex)" [params]="col?.type?.model?.paramConfigs" [rowData]="rowData"
                                 [elementPath]="getRowPath(col, rowData)" (dropDownClick)="toggleOpen($event)"></nm-action-dropdown>
                         </span>
