warning message styles and ui-table filter row color

--- a/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
@@ -559,6 +559,25 @@ $answerWidth: 99%-$questionWidth;
         margin-left: 0px;
     }
 }
+
+.ui-messages .fa-2x {
+    font-size: 1.3rem;
+}
+.ui-messages-error, .ui-messages-warn {
+    background: none;
+    border: none;
+    padding: 0;
+    margin-left: 20px;
+}
+.ui-messages-warn {
+    color: #e5991c;
+}
+.ui-messages-error{
+    color: #a94442;
+    .fa-close::before{
+        content:"\F071";
+    }
+}
 .iconField {
     &::after {
         background-size: 28px 28px;
