update message styles

--- a/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
@@ -563,7 +563,7 @@ $answerWidth: 99%-$questionWidth;
 .ui-messages .fa-2x {
     font-size: 1.3rem;
 }
-.ui-messages-error, .ui-messages-warn {
+.form-group .ui-messages-error, .form-group .ui-messages-warn {
     background: none;
     border: none;
     padding: 0;
