--- a/nimbus-ui/nimbusui/src/app/components/platform/section.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/section.component.html
@@ -41,11 +41,11 @@
             </ng-template>
             <!-- Grid Param -->
             <ng-template [ngIf]="element.alias == 'Grid'">
-                <infinite-scroll-grid
+                <nm-table
                     [element]="element" 
                     [params]="element?.config?.type?.elementConfig?.type?.model?.paramConfigs"
                     (onScrollEvent)="onScrollEvent()">
-                </infinite-scroll-grid>
+                </nm-table>
             </ng-template>
             <!--Other buttons. Refactor item : to be triggred based on the buttongroup annotation-->
             <ng-template [ngIf]="element.alias == 'Button' && element?.visible == true">
